# sift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  design.md
crates/sift-cli/: Cargo.toml
crates/sift-cli/src/: interactive.rs  main.rs
crates/sift-core/: Cargo.toml
crates/sift-core/src/: context.rs  lib.rs  status.rs
crates/sift-core/src/client/: amp.rs  claude_code.rs  codex.rs  droid.rs  gemini_cli.rs  mod.rs  opencode.rs  registry.rs  vscode.rs
crates/sift-core/src/commands/: context.rs  install.rs  mod.rs  registry.rs  uninstall.rs
crates/sift-core/src/config/: managed_json.rs  merge.rs  mod.rs  ownership.rs  ownership_store.rs  parser.rs  paths.rs  schema.rs  store.rs
crates/sift-core/src/config/client_config/: json.rs  mod.rs  toml.rs
crates/sift-core/src/deploy/: executor.rs  install.rs  mod.rs  service.rs  targeting.rs  uninstall.rs
crates/sift-core/src/fs/: link_mode.rs  mod.rs  tree_hash.rs
crates/sift-core/src/git/: fetcher.rs  mod.rs  spec.rs  tests.rs
crates/sift-core/src/install/: git_exclude.rs  mod.rs  orchestrator.rs  scope.rs
crates/sift-core/src/lockfile/: mod.rs  store.rs  types.rs
crates/sift-core/src/mcp/: builder.rs  installer.rs  mod.rs  schema.rs  spec.rs
crates/sift-core/src/mcpb/: bundle.rs  converter.rs  manifest.rs  mod.rs  security.rs
crates/sift-core/src/orchestration/: install.rs  mod.rs  orchestrator.rs  scope.rs  uninstall.rs
crates/sift-core/src/registry/: marketplace.rs  mod.rs  resolver.rs  schema.rs  sift.rs
crates/sift-core/src/registry/marketplace/: adapter.rs  github_fetcher.rs  merge_nested.rs  mod.rs
crates/sift-core/src/runtime/: mcpb_resolver.rs  mod.rs
crates/sift-core/src/skills/: installer.rs  linker.rs  mod.rs  schema.rs
crates/sift-core/src/source/: mod.rs  resolver.rs  spec.rs  tests.rs
crates/sift-core/src/types/: mod.rs
crates/sift-core/src/version/: constraints.rs  git.rs  lock.rs  mod.rs  store.rs
crates/sift-core/tests/: app_context.rs  claude_code_writer.rs  client_claude_code.rs  codex_toml.rs  config_ownership.rs  config_ownership_store.rs  config_paths.rs  config_store.rs  deploy_executor.rs  deploy_scope.rs  deploy_targeting.rs  git_exclude.rs  install_claude_code.rs  install_claude_code_skill.rs  install_command.rs  install_orchestration_errors.rs  install_service.rs  install_skill_local_scope.rs  link_mode_downgrade.rs  lockfile_origin.rs  managed_json.rs  marketplace_errors.rs  marketplace_mcp_resolution.rs  mcp_installer.rs  mcpb_e2e.rs  mcpb_source_resolution.rs  registry_resolver.rs  runtime_runner_spec.rs  scope_resolution.rs  skill_install_pipeline.rs  skill_installer.rs  skills_linker.rs  status.rs  uninstall_command.rs  uninstall_service.rs  version_git.rs
crates/sift-core/tests/support/: git.rs
crates/sift-gui/: Cargo.toml
crates/sift-gui/src/: main.rs
crates/sift-tui/: Cargo.toml
crates/sift-tui/src/: main.rs
tests/: integration_test.rs
