[workspace]
resolver = "2"
members = ["crates/sift-core", "crates/sift-cli", "crates/sift-tui", "crates/sift-gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sift contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lutra/sift"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
git2 = "0.19"
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
blake3 = "1.5"
zip = "2.2"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# GUI dependencies
iced = "0.13"

[workspace.metadata.cargo-semver-check]
lints_level = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
