[package]
name = "sift-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
git2 = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
